src/test/pass/import/var_access.lly
import var_exporter

if var_exporter::v != 10:
    print("Failed!\n")
