src/test/fail/basic_syntax/assign_in_condition.lly
#[
SyntaxError: Conditional expression has no value.
Where: File "assign_in_condition.lly" at line 8
]#

var a = 10

if a = 10:
    print("Failed!\n")
